@@ -1,3 +1,10 @@
+2008-10-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Nicer 'make dist' output.
+	* lib/am/distdir.am (distdir): Hide the complex script
+	used for computing the relative subdirs; echo the sub-make
+	command.
+
 2008-10-12  William Pursell <bill.pursell@gmail.com>  (tiny patch)
 
 	* tests/defs.in: Fix comment typo.
